--- a/.github/workflows/system.yaml
+++ b/.github/workflows/system.yaml
@@ -10,7 +10,7 @@ on:
 jobs:
     unit-testing:
         name: Unit Testing
-        runs-on: macos-lastest
+        runs-on: macos-latest
         steps:
         - name: Welcome message 
           run: echo "My first github action job"
