--- a/.github/workflows/system.yaml
+++ b/.github/workflows/system.yaml
@@ -12,6 +12,9 @@ jobs:
         name: Unit Testing
         runs-on: macos-latest
         steps:
+        - name: Checkout Repository
+          uses: actions/checkout@v4
+          
         - name: Welcome message 
           run: echo "My first github action job"
     
