--- a/.github/workflows/system.yaml
+++ b/.github/workflows/system.yaml
@@ -14,12 +14,18 @@ jobs:
         steps:
         - name: Checkout Repository
           uses: actions/checkout@v4
+
+        - name: List and read files 
+          run: |
+            echo "My first github action job"
+            ls -ltra
+            cat cat README.md
+        - name: genrate ASCII artwork
+          run: cowsay -f dragon "Run for cover, I am a DRAGON....RAWR" >> dragon.txt
+            
+            
+       # - name: list files 
+       #  run: ls
           
-        - name: Welcome message 
-          run: echo "My first github action job"
-    
-        - name: list files 
-          run: ls
-          
-        - name: read file 
-          run: cat README.md
+       # - name: read file 
+        #  run: cat README.md
