--- a/.github/workflows/system.yaml
+++ b/.github/workflows/system.yaml
@@ -20,7 +20,9 @@ jobs:
             echo "My first github action job"
             ls -ltra
             cat README.md
-
+            
+        - name: Install cowsay programe 
+          run: brew install cowsay
 
         - name: genrate ASCII artwork
           run: cowsay -f dragon "Run for cover, I am a DRAGON....RAWR" >> dragon.txt
