--- a/.github/workflows/executing-shellscripting.yaml
+++ b/.github/workflows/executing-shellscripting.yaml
@@ -20,5 +20,5 @@ jobs:
 
         - name: Executing shell script 
           run: |
-            chmod +x shell-script.sh
-            ./shell-script.sh
+            chmod +x 
+            ./ shell-script.sh
